gcc/testsuite/rust/rustc/ui/issues/issue-10545.rs
mod a {
    struct S;
    impl S { }
}

fn foo(_: a::S) { // { dg-error ".E0603." "" { target *-*-* } }
}

fn main() {}

